# pixplace

./: .gitignore  Cargo.toml  nx.json  package-lock.json  package.json  tsconfig.base.json
apps/backend/: Cargo.toml  project.json
apps/backend/migrations/: 20240513000000_init.sql
apps/backend/src/: main.rs  models.rs
apps/frontend/: index.html  package.json  vite.config.mts
apps/frontend/src/app/: app.tsx
spec/: ARCHITECTURE.md  DATABASE_ERD.md
